@@ -28,7 +28,8 @@ import os
 import subprocess
 from datetime import datetime
 
-from ..config import DEF_USER, SCOPE_DICT
+from ..config import (DEF_USER, SCOPE_DICT, DEF_PICKER,
+                      TOPAZ_SIZE, LOGPICKER_SIZES)
 
 
 def getUsername(mdPath):
@@ -81,3 +82,15 @@ def precalculateVars(paramDict):
             group_frames += 1
 
     return bin, gain, defect, group_frames
+
+
+def setParticleSizes(model):
+    """ Setup particle sizes when running in non-GUI mode. """
+    if DEF_PICKER == 'Topaz':
+        model.acqDict['PtclSizes'] = TOPAZ_SIZE, LOGPICKER_SIZES[1]
+        model.calcBox(DEF_PICKER)
+    elif DEF_PICKER == 'LogPicker':
+        model.acqDict['PtclSizes'] = LOGPICKER_SIZES
+        model.calcBox(DEF_PICKER)
+    else:
+        model.acqDict['PtclSizes'] = 0, LOGPICKER_SIZES[1]
