@@ -1,5 +1,6 @@
 0.9.9:
     - add different picker options: cryolo, topaz, logpicker (relion)
+    - add parser tests
 0.9.8:
     - update Scipion template, fixes for SerialEM option after 0.9.7
     - prints job time for external jobs
